<?xml version="1.0"?>
<package>
  <name>tr_hub_parser</name>
  <version>0.0.0</version>
  <description>The tr_hub_parser package</description>

  <maintainer email="pierre-louis.kabaradjian@terabee.com">Pierre-Louis Kabaradjian</maintainer>
  <maintainer email="krzysztof.zurad@terabee.com">Krzysztof Zurad</maintainer>
  <maintainer email="mateusz.sadowski@terabee.com">Mateusz Sadowski</maintainer>

  <author email="luis.rodrigues@terabee.com">Luis Rodrigues</author>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rospy</build_depend>
  <test_depend>rosunit</test_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>rospy</run_depend>
</package>
